--- a/config.yml
+++ b/config.yml
@@ -1,15 +1,20 @@
+openai_api_type: 'openai'
 azure_openai_key_file: "azure_openai_key.txt"
+openai_key_file: "openai_key.txt"
+tg_token_file: "tg_bot_token.txt"
 azure_openai_api_endpoint: 'https://rag-implementation.openai.azure.com/'
 azure_openai_api_version: '2023-05-15'
 azure_deployment_name: 'gpt-35-turbo'
 azure_llm_model: 'gpt-35-turbo'
 azure_deployment_name_embeddigns: 'embeddings-ada'
 azure_embeddign_model: 'text-embedding-ada-002'
-embedding_mode: 'azureopenai'
+embedding_mode: 'openai'
 local_embeddings_model_name: ''
 db_collection_name: 'connessi'
-llm_mode: 'azureopenai'
+llm_mode: 'openai'
 llm_model_path: None
 accepted_file_extentions: ['pdf', 'txt', 'xlsx']
 chunk_size: 500
 chunk_overlap: 20
+faq_similarity_threshold: 0.95
+similarity_cutoff: 0.65
