--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,9 @@
 openai_api_type: 'openai'
-azure_openai_key_file: "azure_openai_key.txt"
-openai_key_file: "openai_key.txt"
 tg_token_file: "tg_bot_token.txt"
 azure_openai_api_endpoint: 'https://rag-implementation.openai.azure.com/'
 azure_openai_api_version: '2023-05-15'
-azure_deployment_name: 'gpt-35-turbo'
-azure_llm_model: 'gpt-35-turbo'
+azure_deployment_name: "gpt-4-0125-preview"
+azure_llm_model: "gpt-4-0125-preview"
 azure_deployment_name_embeddigns: 'embeddings-ada'
 azure_embeddign_model: 'text-embedding-ada-002'
 embedding_mode: 'openai'
