--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ chromadb==0.4.18
 ipython==8.18.1
 llama_index==0.9.13
 pypdf==4.0.1
-spacy==3.7.2
-guardrails-ai==0.3.2
-openpyxl==3.1.2
-openai-whisper==20231117
+# spacy==3.7.2
+# guardrails-ai==0.3.2
+# openpyxl==3.1.2
+# openai-whisper==20231117
 python-telegram-bot==20.7
 pydub==0.25.1
